[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-geyser-plugin-postgres"
description = "The Solana AccountsDb plugin for PostgreSQL database."
version = "1.15.2"
repository = "https://github.com/solana-labs/solana-accountsdb-plugin-postgres"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-validator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.5.0"
bytemuck = "1.13.1"
chrono = { version = "0.4.27", features = ["serde"] }
crossbeam-channel = "0.5.8"
log = "0.4.20"
openssl = { version = "0.10.57" }
postgres = { version = "0.19.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2.6", features = ["derive"] }
postgres-openssl = { version = "0.5.0"}
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
solana-geyser-plugin-interface = { version = "1.16.10" }
solana-logger = { version = "1.16.10" }
solana-measure = { version = "1.16.10" }
solana-metrics = { version = "1.16.10" }
solana-runtime = { version = "1.16.10" }
solana-sdk = { version = "1.16.10" }
solana-transaction-status = { version = "1.16.10" }
thiserror = "1.0.47"
tokio-postgres = "0.7.10"

[dev-dependencies]
libc = "0.2.147"
libloading = "0.8.0"
serial_test = "2.0.0"
socket2 = { version = "0.5.3", features = ["all"] }

solana-account-decoder = { version = "1.16.10" }
# solana-core = { version = "1.16.10" }
# solana-local-cluster = { version = "1.16.10" }
# solana-net-utils = { version = "1.16.10" }
# solana-streamer = { version = "1.16.10" }
tempfile = "3.8.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
